--- a/templates/plex_mate_scan_list.html
+++ b/templates/plex_mate_scan_list.html
@@ -12,6 +12,7 @@
         <select id="option1" name="option1" class="form-control form-control-sm">
           <option value="all" selected>전체</option>
           <option value="fp_ktv" selected>국내TV 파일처리</option>
+          <option value="gds_tool" selected>구드공 툴</option>
         </select>
         <select id="option2" name="option2" class="form-control form-control-sm">
           <option value="all" selected>전체</option>
@@ -44,6 +45,7 @@
 
 <script type="text/javascript">
 var last_list_option = "{{arg['scan_item_last_list_option']}}";
+var plex_url = "{{arg['base_url']}}";
 var machine = "{{arg['base_machine']}}";
 
 $(document).ready(function(){
@@ -97,8 +99,15 @@ function make_list(data) {
     right = j_row_start();
     tmp = '';
     tmp += j_info_text_left("경로", data[i].target, 2, 10);
-    tmp += j_info_text_left("섹션", data[i].target_section_id, 2, 10);
     tmp += j_info_text_left("파일체크", data[i].filecheck_count, 2, 10);
+    if (data[i].meta_info != null) {
+      tmp += j_info_text_left("섹션", data[i].meta_info[0].name, 2, 10);
+
+      
+      tmp += '<pre>' + data[i].meta_info[0].summary + '</pre>';
+    }
+    
+    
     right += j_col(9, tmp);
 
     tmp = data[i].created_time + ' (생성)'
@@ -114,6 +123,10 @@ function make_list(data) {
     tmp = ''
     tmp += j_button('globalDbDeleteItemBtn', 'DB 삭제', {'id':data[i].id}, 'danger', true, true);
     tmp += j_button('globalJsonBtn', 'JSON', {'idx':i}, 'info', true, true);
+    if (data[i].meta_info != null) {
+      var meta_url = plex_url + '/web/index.html#!/server/' + machine + '/details?key=%2Flibrary%2Fmetadata%2F'+data[i].meta_info[0].metadata_item_id;
+      tmp += j_button('globalOpenBtn', 'PLEX GO', {'url':meta_url}, 'info', true, true);
+    }
     tmp = j_button_group(tmp)
     right += j_col(12, tmp)
     right += j_row_end();
