--- a/templates/plex_mate_scan_setting.html
+++ b/templates/plex_mate_scan_setting.html
@@ -4,19 +4,30 @@
 {{ macros.m_button_group([['globalSettingSaveBtn', '설정 저장']])}}
 {{ macros.m_row_start('5') }}
 {{ macros.m_row_end() }}
-{{ macros.m_hr() }}  
+<nav>  
+  {{ macros.m_tab_head_start() }}
+    {{ macros.m_tab_head('basic', '기본', true) }}
+    {{ macros.m_tab_head('db', 'DB', false) }}
+  {{ macros.m_tab_head_end() }}
+</nav> 
 <form id='setting'>
-{{ macros.setting_input_int('scan_max_scan_count', '최대 실행 프로세스 수', min=1, max=20, value=arg['scan_max_scan_count']) }}
-{{ macros.setting_input_int('scan_max_wait_time', '파일체크 대기 시간', value=arg['scan_max_wait_time'], desc=['파일(폴더) 대기 시간. 분단위', '추가 모드 : 파일이 나타날 때까지 대기 시작.', '삭제 모드 : 파일이 없어질 때까지 대기 시간']) }}
-{{ macros.setting_input_int('scan_filecheck_thread_interval', '파일체크 주기', value=arg['scan_filecheck_thread_interval'], desc=['단위 : 초']) }}
-{{ macros.setting_radio_with_value('scan_mode', '스캔 방식', [['bin', '바이너리'], ['web', '웹']], value=arg['scan_mode'], desc=['바이너리 모드로 사용 하다 Plex가 지원하지 않는 경우 변경']) }}
+  <div class="tab-content" id="nav-tabContent">
+    {{ macros.m_tab_content_start('basic', true) }}
+      {{ macros.setting_input_int('scan_max_scan_count', '최대 실행 프로세스 수', min=1, max=20, value=arg['scan_max_scan_count']) }}
+      {{ macros.setting_input_int('scan_max_wait_time', '파일체크 대기 시간', value=arg['scan_max_wait_time'], desc=['파일(폴더) 대기 시간. 분단위', '추가 모드 : 파일이 나타날 때까지 대기 시작.', '삭제 모드 : 파일이 없어질 때까지 대기 시간']) }}
+      {{ macros.setting_input_int('scan_filecheck_thread_interval', '파일체크 주기', value=arg['scan_filecheck_thread_interval'], desc=['단위 : 초']) }}
+      {{ macros.setting_radio_with_value('scan_mode', '스캔 방식', [['bin', '바이너리'], ['web', '웹']], value=arg['scan_mode'], desc=['바이너리 모드로 사용 하다 Plex가 지원하지 않는 경우 변경']) }}
 
-{{ macros.m_hr_head_bottom() }}
-{{ macros.info_text_big('', '<테스트>', '')}}
-{{ macros.setting_input_text('scan_manual_target', '스캔 타겟 파일 또는 폴더',  value=arg['scan_manual_target']) }}
-{{ macros.setting_buttons([['select_target_btn', '선택'], ['add_btn', '추가 모드'], ['remove_btn', '삭제 모드']]) }}
-{{ macros.m_hr_head_bottom() }}
-
+      {{ macros.m_hr_head_bottom() }}
+      {{ macros.info_text_big('', '<테스트>', '')}}
+      {{ macros.setting_input_text('scan_manual_target', '스캔 타겟 파일 또는 폴더',  value=arg['scan_manual_target']) }}
+      {{ macros.setting_buttons([['select_target_btn', '선택'], ['add_btn', '추가 모드'], ['remove_btn', '삭제 모드']]) }}
+    {{ macros.m_tab_content_end() }} 
+    
+    {{ macros.m_tab_content_start('db', false) }}
+      {{ macros.setting_input_text_and_buttons('scan_db_delete_day', 'DB 삭제 기간', [['globalDbDeleteDayBtn', '기간 적용 삭제', [['tag_id','scan_db_delete_day']]], ['globalDbDeleteBtn', '전체 삭제']], value=arg['scan_db_delete_day'], col='6') }} 
+      {{ macros.setting_checkbox('scan_db_auto_delete', 'DB 자동 삭제', value=arg['scan_db_auto_delete'], desc=['On : 기간 적용하여 DB를 자동 삭제합니다.']) }}
+    {{ macros.m_tab_content_end() }} 
 </form>
 
 <script type="text/javascript">
