--- a/templates/plex_mate_periodic_task.html
+++ b/templates/plex_mate_periodic_task.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-{{ macros.m_button_group([['base_path_config_edit_btn', '작업 편집'], ['all_sched_add_btn', '모두 스케쥴링 등록'], ['all_sched_remove_btn', '모두 스케쥴링 취소']])}}
+{{ macros.m_button_group([['globalEditBtn', '작업 편집', [['file', arg['base_path_config']]] ], ['all_sched_add_btn', '모두 스케쥴링 등록'], ['all_sched_remove_btn', '모두 스케쥴링 취소']])}}
 {{ macros.m_row_start('5') }}
 {{ macros.m_row_end() }}
 
@@ -12,20 +12,14 @@
   <div id="list_div"></div>
 </div>
 
-
 <script type="text/javascript">
-var package_name = "{{arg['package_name'] }}";
-var sub = "{{arg['sub']}}";
-var current_data = null;
-var path_app_root = "{{arg['path_app_root']}}";
-var base_path_config = "{{arg['base_path_config']}}";
 
 $(document).ready(function(){
   refresh();
 });
 
 function refresh() {
-  global_send_command2('get_tasks', null, null, null, null, function(e) {
+  globalSendCommand('get_tasks', null, null, null, function(e) {
     make_list(e.data);
   });
 }
@@ -46,7 +40,7 @@ function make_list(data) {
     <th style="width:5%; text-align:left;">Action</th> \
     </tr></thead><tbody id="list">';
   
-  if (data.length == 0) str += '<tr><td colspan="6"><h4>작업이 없습니다.</h4></td></tr>';
+  if (data.length == 0) str += '<tr><td colspan="11"><h4>작업이 없습니다.</h4></td></tr>';
 
   for(i in data) {
     str += '<tr class="chover" style="cursor: pointer;" data-toggle="collapse" data-target="#collapse_' + i + '" aria-expanded="true" >';
@@ -79,51 +73,42 @@ function make_list(data) {
 
     tmp = (data[i].설명 != null) ? data[i].설명 : "";
     str += '<td scope="col" style="width:10%; text-align:center;">'+ tmp + '</td>';
-
-    tmp = '<input type="button" id="kill_btn" value="KILL" class="btn btn-sm btn-outline-danger py-0" style="font-size: 0.8em;" data-id="'+parseInt(i+1)+'">';
     
-    tmp = m_button('execute_btn', '실행', [{'key':'idx', 'value':i}]);
+    tmp = j_button('execute_btn', '실행', {'idx':i});
     str += '<td scope="col" style="width:10%; text-align:left;">'+ tmp + '</td>';
 
     str += '</tr>'
   }
   str += '</table>';
-  document.getElementById("list_div").innerHTML = str;
-  document.getElementById("list_div").innerHTML = str;
+  $("#list_div").html(str);
   $('input[id^="use_checkbox|"]').bootstrapToggle();
 }
 
-
-$("body").on('click', '#base_path_config_edit_btn', function(e){
-  e.preventDefault();
-  url = "/flaskcode" + base_path_config.replace(path_app_root, '');
-  window.location.href = url;
-});
 
 
 $("body").on('change', 'input[id^="use_checkbox|"]', function(e){
   var flag = $(this).prop('checked');
   var idx = $(this).data('idx');
-  global_send_command2('task_sched', idx, flag, null, null, function(e) {
+  globalSendCommand('task_sched', idx, flag, null, function(e) {
     refresh();
   });
 });
 
 
 $("body").on('click', '#all_sched_add_btn', function(e){
-  global_send_command2('all_sched_add', null, null, null, null, function(e) {
+  globalSendCommand('all_sched_add', null, null, null, function(e) {
     refresh();
   });
 });
 
 $("body").on('click', '#all_sched_remove_btn', function(e){
-  global_send_command2('all_sched_remove', null, null, null, null, function(e) {
+  globalSendCommand('all_sched_remove', null, null, null, function(e) {
     refresh();
   });
 });
 
 $("body").on('click', '#execute_btn', function(e){
-  global_send_command2('task_execute', $(this).data('idx'), null, null, null, function(e) {
+  globalSendCommand('task_execute', $(this).data('idx'), null, null, function(e) {
     ret = e.data;
     if (ret=='scheduler' || ret=='thread') {
       $.notify('<strong>작업을 시작하였습니다. ('+ret+')</strong>', {
