--- a/templates/plex_mate_tool_simple.html
+++ b/templates/plex_mate_tool_simple.html
@@ -1,204 +1,175 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div>
-  <nav>
-    {{ macros.m_tab_head_start() }}
-      {{ macros.m_tab_head2('update', '목록', true) }}
-    {{ macros.m_tab_head_end() }}
-  </nav>
-  <form id='setting'>
-  <div class="tab-content" id="nav-tabContent">
-    {{ macros.m_tab_content_start('update', true) }}
-      {{ macros.setting_button([['update_show_add_btn', '쇼 추가된 시간을 마지막 에피소드 추가된 날짜로 변경']], left='쇼 추가된날짜', desc=None ) }}
-      {{ macros.m_hr() }}
-      {{ macros.setting_top('컬렉션 삭제') }}
-      <div class="input-group col-sm-9">
-        <select id="remove_collection_section_id" name="remove_collection_section_id" class="form-control form-control-sm">
-          {% for item in arg['library_list'] %}
-            {% if item['section_type'] == 1 %}
-              {% if loop.counter == 0 %}
-              <option value="{{ item['id'] }}" selected>{{item['name']}}</option>
-              {% else %}
-              <option value="{{ item['id'] }}">{{item['name']}}</option>
-              {% endif %}
-            {% endif %}   
-          {% endfor %}
-        </select>
-        <div class="btn-group btn-group-sm flex-wrap mr-2" role="group">
-        {% set buttons = [['remove_collection_count_btn', '컬렉션 수 확인'], ['remove_collection_btn', '컬렉션 삭제']] %}
-        {% for b in buttons %}
-          <button id="{{b[0]}}" class="btn btn-sm btn-outline-success">{{b[1]}}</button>
-        {% endfor %}
-        </div>
-      </div>
-      {{ macros.setting_bottom('') }}
-      {{ macros.m_hr() }}
-      {{ macros.buttons([['remove_sjva_extra_count_btn', '온라인 부가영상 수 확인'], ['remove_sjva_extra_btn', '온라인 부가영상 삭제']], left='부가영상 삭제', desc=None ) }}
-      <!--['update_sjva_extra_btn', '온라인 부가영상 재생에 사용하는 SJVA를 이 SJVA로 변경(GDS 전용)']-->
-      
-      {{ macros.m_hr() }}
-      {{ macros.setting_input_text_and_buttons('library_location_source', '라이브러리 경로 변경', [['library_location_source_btn', '데이터 확인']], value=arg['tool_simple_library_location_source'], desc=['파일 경로 변경 소스']) }}
-      {{ macros.setting_input_text_and_buttons('library_location_target', '', [['library_location_target_btn', '변경 실행']], value=arg['tool_simple_library_location_target'], desc=['파일 경로 변경 타겟']) }}
-      
-      {{ macros.m_hr() }}
-      {{ macros.buttons([['duplicate_list_btn', '동일파일이 동일메타에 중복되어 있는 경우 (정리 대상 목록)'], ['duplicate_remove_btn', '정리']], left='스캔에러 정리', desc=None ) }}
-      
-      {{ macros.m_hr() }}
-      {{ macros.setting_top('동일파일 동일메타 확인') }}
-      <div class="input-group col-sm-9">
-        <select id="equal_file_equal_meta_section_id" name="equal_file_equal_meta_section_id" class="form-control form-control-sm">
-          {% for item in arg['library_list'] %}
-            {% if item['section_type'] == 1 %}
-              {% if loop.counter == 0 %}
-              <option value="{{ item['id'] }}" selected>{{item['name']}}</option>
-              {% else %}
-              <option value="{{ item['id'] }}">{{item['name']}}</option>
-              {% endif %}
-            {% endif %}   
-          {% endfor %}
-        </select>
-        <div class="btn-group btn-group-sm flex-wrap mr-2" role="group">
-        {% set buttons = [['equal_file_equal_meta_btn', '확인']] %}
-        {% for b in buttons %}
-          <button id="{{b[0]}}" class="btn btn-sm btn-outline-success">{{b[1]}}</button>
-        {% endfor %}
-        </div>
-      </div>
-      {{ macros.setting_bottom('') }}
+{{ macros.m_hr() }}
+{{ macros.setting_buttons([['update_show_add_btn', '쇼 추가된 시간을 마지막 에피소드 추가된 날짜로 변경']], left='쇼 추가된날짜', desc=None ) }}
 
 
-      
-      {{ macros.m_hr() }}
-      {{ macros.setting_top('에피소드 썸네일 처리') }}
-      <div class="input-group col-sm-9">
-        <select id="empty_episode_process_section_id" name="empty_episode_process_section_id" class="form-control form-control-sm">
-          {% for item in arg['library_list'] %}
-            {% if item['section_type'] == 2 %}
-              <option value="{{ item['id'] }}">{{item['name']}}</option>
-            {% endif %}   
-          {% endfor %}
-        </select>
-        <div class="btn-group btn-group-sm flex-wrap mr-2" role="group">
-        {% set buttons = [['empty_episode_process_btn', '시작']] %}
-        {% for b in buttons %}
-          <button id="{{b[0]}}" class="btn btn-sm btn-outline-success">{{b[1]}}</button>
-        {% endfor %}
-        </div>
-      </div>
-      {{ macros.setting_bottom(['썸네일이 없거나 media인 경우 시즌이나 쇼의 Art로 변경.', '라이브러리 복사 후 사용']) }}
-
-      {{ macros.m_hr() }}
-      {{ macros.setting_top('휴지통 표시 제거') }}
-      <div class="input-group col-sm-9">
-        <select id="remove_trash_section_id" name="empty_episode_process_section_id" class="form-control form-control-sm">
-          {% for item in arg['library_list'] %}
-            {% if item['section_type'] == 2 %}
-              <option value="{{ item['id'] }}">{{item['name']}}</option>
-            {% endif %}   
-          {% endfor %}
-        </select>
-        <div class="btn-group btn-group-sm flex-wrap mr-2" role="group">
-        {% set buttons = [['remove_trash_btn', '시작']] %}
-        {% for b in buttons %}
-          <button id="{{b[0]}}" class="btn btn-sm btn-outline-success">{{b[1]}}</button>
-        {% endfor %}
-        </div>
-      </div>
-      {{ macros.setting_bottom(['섹션내 모든 휴지통 표시 제거']) }}
-      <!--
-      {{ macros.m_hr() }}
-      {{ macros.setting_button([['vacuum_btn', 'DB파일 크기 줄이기']], left='DB파일', desc=['백업 필수.', 'Plex가 아무 일도 하지 않는 상태에서 실행'] ) }}
-      -->
-    {{ macros.m_tab_content_end() }}  
-    
+{{ macros.m_hr() }}
+{{ macros.setting_top('컬렉션 삭제') }}
+<div class="input-group col-sm-9">
+  <select id="remove_collection_section_id" name="remove_collection_section_id" class="form-control form-control-sm">
+    {% for item in arg['library_list'] %}
+      {% if item['section_type'] == 1 or item['section_type'] == 2 %}
+        {% if loop.counter == 0 %}
+        <option value="{{ item['id'] }}" selected>{{item['name']}}</option>
+        {% else %}
+        <option value="{{ item['id'] }}">{{item['name']}}</option>
+        {% endif %}
+      {% endif %}   
+    {% endfor %}
+  </select>
+  <div class="btn-group btn-group-sm flex-wrap mr-2" role="group">
+  {% set buttons = [['remove_collection_count_btn', '컬렉션 수 확인'], ['remove_collection_btn', '컬렉션 삭제']] %}
+  {% for b in buttons %}
+    <button id="{{b[0]}}" class="btn btn-sm btn-outline-success">{{b[1]}}</button>
+  {% endfor %}
   </div>
-</form>
 </div>
+{{ macros.setting_bottom('') }}
+
+{{ macros.m_hr() }}
+{{ macros.setting_buttons([['remove_extra_count_btn', '온라인 부가영상 수 확인'], ['remove_extra_btn', '온라인 부가영상 삭제']], left='부가영상 삭제', desc=None ) }}
+
+
+{{ macros.m_hr() }}
+{{ macros.setting_input_text_and_buttons('library_location_source', '라이브러리 경로 변경', [['library_location_source_btn', '데이터 확인']], value=arg['tool_simple_library_location_source'], desc=['파일 경로 변경 소스']) }}
+{{ macros.setting_input_text_and_buttons('library_location_target', '', [['library_location_target_btn', '변경 실행']], value=arg['tool_simple_library_location_target'], desc=['파일 경로 변경 타겟']) }}
+
+{{ macros.m_hr() }}
+{{ macros.setting_buttons([['duplicate_list_btn', '동일파일이 동일메타에 중복되어 있는 경우 (정리 대상 목록)'], ['duplicate_remove_btn', '정리']], left='스캔에러 정리', desc=None ) }}
+
+
+{{ macros.m_hr() }}
+{{ macros.setting_top('동일파일 동일메타 확인') }}
+<div class="input-group col-sm-9">
+  <select id="equal_file_equal_meta_section_id" name="equal_file_equal_meta_section_id" class="form-control form-control-sm">
+    {% for item in arg['library_list'] %}
+      {% if item['section_type'] == 1 %}
+        {% if loop.counter == 0 %}
+        <option value="{{ item['id'] }}" selected>{{item['name']}}</option>
+        {% else %}
+        <option value="{{ item['id'] }}">{{item['name']}}</option>
+        {% endif %}
+      {% endif %}   
+    {% endfor %}
+  </select>
+  <div class="btn-group btn-group-sm flex-wrap mr-2" role="group">
+  {% set buttons = [['equal_file_equal_meta_btn', '확인']] %}
+  {% for b in buttons %}
+    <button id="{{b[0]}}" class="btn btn-sm btn-outline-success">{{b[1]}}</button>
+  {% endfor %}
+  </div>
+</div>
+{{ macros.setting_bottom('') }}
+
+
+
+{{ macros.m_hr() }}
+{{ macros.setting_top('에피소드 썸네일 처리') }}
+<div class="input-group col-sm-9">
+  <select id="empty_episode_process_section_id" name="empty_episode_process_section_id" class="form-control form-control-sm">
+    {% for item in arg['library_list'] %}
+      {% if item['section_type'] == 2 %}
+        <option value="{{ item['id'] }}">{{item['name']}}</option>
+      {% endif %}   
+    {% endfor %}
+  </select>
+  <div class="btn-group btn-group-sm flex-wrap mr-2" role="group">
+  {% set buttons = [['empty_episode_process_btn', '시작']] %}
+  {% for b in buttons %}
+    <button id="{{b[0]}}" class="btn btn-sm btn-outline-success">{{b[1]}}</button>
+  {% endfor %}
+  </div>
+</div>
+{{ macros.setting_bottom(['썸네일이 없거나 media인 경우 시즌이나 쇼의 Art로 변경.', '라이브러리 복사 후 사용']) }}
+
+
+{{ macros.m_hr() }}
+{{ macros.setting_top('휴지통 표시 제거') }}
+<div class="input-group col-sm-9">
+  <select id="remove_trash_section_id" name="empty_episode_process_section_id" class="form-control form-control-sm">
+    {% for item in arg['library_list'] %}
+      {% if item['section_type'] == 2 %}
+        <option value="{{ item['id'] }}">{{item['name']}}</option>
+      {% endif %}   
+    {% endfor %}
+  </select>
+  <div class="btn-group btn-group-sm flex-wrap mr-2" role="group">
+  {% set buttons = [['remove_trash_btn', '시작']] %}
+  {% for b in buttons %}
+    <button id="{{b[0]}}" class="btn btn-sm btn-outline-success">{{b[1]}}</button>
+  {% endfor %}
+  </div>
+</div>
+{{ macros.setting_bottom(['섹션내 모든 휴지통 표시 제거']) }}
+
 
 <script type="text/javascript">
-var package_name = "{{arg['package_name'] }}";
-var sub = "{{arg['sub'] }}";
-var sub2 = "{{arg['sub2'] }}";
-var current_data = null;
 
 $(function(){ 
 });
 
 
-
 $("body").on('click', '#update_show_add_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('update_show_add');
+  globalSendCommandPage('update_show_add');
 });
 
 $("body").on('click', '#remove_collection_count_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('remove_collection_count', $('#remove_collection_section_id').val());
+  globalSendCommandPage('remove_collection_count', $('#remove_collection_section_id').val());
 });
 
 $("body").on('click', '#remove_collection_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('remove_collection', $('#remove_collection_section_id').val());
+  globalSendCommandPage('remove_collection', $('#remove_collection_section_id').val());
 });
 
-$("body").on('click', '#remove_sjva_extra_count_btn', function(e){
+$("body").on('click', '#remove_extra_count_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('remove_sjva_extra_count');
+  globalSendCommandPage('remove_extra_count');
 });
 
-$("body").on('click', '#remove_sjva_extra_btn', function(e){
+$("body").on('click', '#remove_extra_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('remove_sjva_extra');
-});
-
-$("body").on('click', '#update_sjva_extra_btn', function(e){
-  e.preventDefault();
-  global_send_command_sub('update_sjva_extra');
+  globalSendCommandPage('remove_extra');
 });
 
 $("body").on('click', '#library_location_source_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('library_location_source', $('#library_location_source').val());
+  globalSendCommandPage('library_location_source', $('#library_location_source').val());
 });
 
 $("body").on('click', '#library_location_target_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('library_location_target', $('#library_location_source').val(), $('#library_location_target').val());
+  globalSendCommandPage('library_location_target', $('#library_location_source').val(), $('#library_location_target').val());
 });
 
 $("body").on('click', '#duplicate_list_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('duplicate_list', '', '', '', '목록');
+  globalSendCommandPage('duplicate_list');
 });
 
 $("body").on('click', '#duplicate_remove_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('duplicate_remove');
+  globalSendCommandPage('duplicate_remove');
 });
 
 $("body").on('click', '#equal_file_equal_meta_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('equal_file_equal_meta', $('#equal_file_equal_meta_section_id').val(), '', '', '목록');
+  globalSendCommandPage('equal_file_equal_meta', $('#equal_file_equal_meta_section_id').val());
 });
 
 $("body").on('click', '#empty_episode_process_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('empty_episode_process', $('#empty_episode_process_section_id').val());
+  globalSendCommandPage('empty_episode_process', $('#empty_episode_process_section_id').val());
 });
 
 $("body").on('click', '#remove_trash_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('remove_trash', $('#remove_trash_section_id').val());
+  globalSendCommandPage('remove_trash', $('#remove_trash_section_id').val());
 });
-
-
-$("body").on('click', '#vacuum_btn', function(e){
-  e.preventDefault();
-  global_send_command_sub('vacuum');
-});
-
-
 
 </script>    
 {% endblock %}
