--- a/templates/plex_mate_clear_bundle.html
+++ b/templates/plex_mate_clear_bundle.html
@@ -49,7 +49,9 @@
   <div class="input-group col-sm-4" style="padding-left:0px; padding-top:5px">
     <div class="btn-group btn-group-sm flex-wrap mr-2" role="group" style="padding-left:5px; padding-top:0px">
       <button id="bundle_stop_btn" class="btn btn-sm btn-outline-info">중지</button>
-      <button id="bundle_start_btn" class="btn btn-sm btn-outline-info">시작</button>
+      <button id="bundle_start_btn" class="btn btn-sm btn-outline-info">1단계</button>
+      <button id="bundle_start2_btn" class="btn btn-sm btn-outline-info">2단계</button>
+      <button id="bundle_start2_btn" class="btn btn-sm btn-outline-info">3단계</button>
     </div>
   </div>
 </div>
@@ -71,15 +73,11 @@
 <div id="list_div"></div>
 
 <script type="text/javascript">
-var package_name = "{{arg['package_name'] }}";
-var sub = "{{ arg['sub'] }}";
-var sub2 = "{{ arg['sub2'] }}";
-var current_data = null;
 
 $(document).ready(function(){
-  //$('#main_container').attr('class', 'container-fluid');  
-  socket_init(package_name, sub, sub2);
+  socket_init();
 });
+
 
 $("body").on('change', '#local_type', function(e){
   e.preventDefault();
@@ -94,32 +92,37 @@ $("body").on('change', '#local_type', function(e){
 
 $("body").on('click', '#bundle_stop_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('stop');
+  globalSendCommandPage('stop');
 });
 
 
 $("body").on('click', '#bundle_start_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('start', $('#local_type').val()+'_'+$('#meta_type').val()+'_'+ $('#prefix').val(), $('#dryrun').is(":checked"));
+  globalSendCommandPage('start', $('#local_type').val()+'_'+$('#meta_type').val()+'_'+ $('#prefix').val(), $('#dryrun').is(":checked"), "step1");
 });
 
+$("body").on('click', '#bundle_start2_btn', function(e){
+  e.preventDefault();
+  globalSendCommandPage('start', $('#local_type').val()+'_'+$('#meta_type').val()+'_'+ $('#prefix').val(), $('#dryrun').is(":checked"), "step2");
+});
 
-
-
-
+$("body").on('click', '#bundle_start3_btn', function(e){
+  e.preventDefault();
+  globalSendCommandPage('start', $('#local_type').val()+'_'+$('#meta_type').val()+'_'+ $('#prefix').val(), $('#dryrun').is(":checked"), "step3");
+});
 
 function make_one(data) {
-  
-  row = m_row_start_hover();
+  row = j_row_start_hover();
   row += make_log("bundle", data.folder + ' / ' + data.bundle);
   if (data.title != null) {
     row += make_log("제목", data.title);
+    row += make_log("메타타입", data.metadata_type);
   } else if (data.file != null) {
     row += make_log("파일", data.file);
   } else {
     row += make_log("삭제", color(humanFileSize(data.remove)));
   } 
-  row += m_row_end();
+  row += j_row_end();
   return row;
 }
 
@@ -135,11 +138,8 @@ function make_status(data) {
     str += ' / 삭제 번들 수  : ' + color(data.remove_count);
     str += ' / 삭제크기 : ' + color(humanFileSize(data.remove_size));
   }
-    
   str += '</h4>';
   $('#status_div').html(str);
-
-
 }
 
 
