--- a/templates/plex_mate_copy_copy.html
+++ b/templates/plex_mate_copy_copy.html
@@ -1,67 +1,54 @@
 {% extends "base.html" %}
 {% block content %}
-<div>
-  {{ macros.m_button_group([['global_setting_save_btn', '설정 저장']])}}
-  {{ macros.m_row_start('5') }}
-  {{ macros.m_row_end() }}
-  <form id='setting'>
-    {{ macros.setting_input_text_and_buttons('dbcopy_copy_path_source_db', '소스 DB 파일 경로', [['select_dbcopy_copy_path_source_db_btn', '경로 선택'], ['source_section_btn', '소스 DB 섹션 확인']], value=arg['dbcopy_copy_path_source_db'], desc=['복사에 사용할 DB파일']) }}
-    <!--{{ macros.setting_input_text_and_buttons('dbcopy_copy_source_section_id', '소스 Section ID', [['source_section_btn', '소스 DB 섹션 확인']], value=arg['dbcopy_copy_source_section_id'], col=6, desc= None) }}-->
-    {{ macros.setting_input_text_and_buttons('dbcopy_copy_path_source_root_path', '소스 파일 경로', [['select_source_locations_btn', '경로 참고']], value=arg['dbcopy_copy_path_source_root_path'], desc=['경로 변환시 사용할 소스 Root']) }}
-    {{ macros.setting_input_text_and_buttons('dbcopy_copy_path_target_root_path', '타겟 파일 경로', [['select_target_locations_btn', '경로 참고']], value=arg['dbcopy_copy_path_target_root_path'], desc=['경로 변환시 사용할 타겟 Root']) }}
-    {{ macros.setting_input_text_and_buttons('dbcopy_copy_target_section_id', 'Plex Section ID', [['target_section_id_btn', 'DB 확인']], value=arg['dbcopy_copy_target_section_id'], desc=None) }}
-    <!--{{ macros.setting_input_text_and_buttons('dbcopy_copy_target_section_location_id', 'Plex Section Location ID', [['target_section_location_id_btn', 'DB 확인']], value=arg['dbcopy_copy_target_section_location_id'], desc=None) }}-->
-    {{ macros.setting_radio('dbcopy_copy_dir_updated_mode', 'updated_at 모드', ['DB 값 사용', '파일시스템 사용'], value=0) }}
-  </form>
-</div>
 
+{{ macros.m_button_group([['globalSettingSaveBtn', '설정 저장']])}}
+{{ macros.m_row_start('5') }}
+{{ macros.m_row_end() }}
+<form id='setting'>
+{{ macros.setting_input_text_and_buttons('copy_copy_path_source_db', '소스 DB 파일 경로', [['select_copy_copy_path_source_db_btn', '경로 선택'], ['source_section_btn', '소스 DB 섹션 확인']], value=arg['copy_copy_path_source_db'], desc=['복사에 사용할 DB파일']) }}
+{{ macros.setting_input_text_and_buttons('copy_copy_path_source_root_path', '소스 파일 경로', [['select_source_locations_btn', '경로 참고']], value=arg['copy_copy_path_source_root_path'], desc=['경로 변환시 사용할 소스 Root']) }}
+{{ macros.setting_input_text_and_buttons('copy_copy_path_target_root_path', '타겟 파일 경로', [['select_target_locations_btn', '경로 참고']], value=arg['copy_copy_path_target_root_path'], desc=['경로 변환시 사용할 타겟 Root']) }}
+{{ macros.setting_input_text_and_buttons('copy_copy_target_section_id', 'Plex Section ID', [['target_section_id_btn', 'DB 확인']], value=arg['copy_copy_target_section_id'], desc=None) }}
+</form>
 
 
 <script type="text/javascript">
-var package_name = "{{arg['package_name'] }}";
-var sub = "{{ arg['sub'] }}";
-var sub2 = "{{ arg['sub2'] }}";
-var current_data = null;
-
 $(document).ready(function(){
 });
 
-
-$("body").on('click', '#select_dbcopy_copy_path_source_db_btn', function(e){
+$("body").on('click', '#select_copy_copy_path_source_db_btn', function(e){
   e.preventDefault();
-  var path = $('#dbcopy_copy_path_source_db').val().trim();
+  var path = $('#copy_copy_path_source_db').val().trim();
   if (path == '') path = '/';
   globalSelectLocalFolder("저장 폴더 선택", path, function(result){
-    $('#dbcopy_copy_path_source_db').val(result);
+    $('#copy_copy_path_source_db').val(result);
   });
 });
 
-
 $("body").on('click', '#source_section_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('source_section',  $('#dbcopy_copy_path_source_db').val(), '', '', '소스 섹션');
+  globalSendCommandPage('source_section',  $('#copy_copy_path_source_db').val());
 });
 
 $("body").on('click', '#target_section_id_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('target_section_id',  $('#dbcopy_copy_path_source_db').val(), '', '', 'Plex Section');
+  globalSendCommandPage('target_section_id',  $('#copy_copy_path_source_db').val());
 });
 
 $("body").on('click', '#target_section_location_id_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('target_section_location_id',  $('#dbcopy_copy_target_section_id').val(), '', '', 'Plex Section Location');
+  globalSendCommandPage('target_section_location_id',  $('#copy_copy_target_section_id').val());
 });
 
 $("body").on('click', '#select_source_locations_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('select_source_locations',  $('#dbcopy_copy_path_source_db').val(), '', '', '소스 Section Locations');
+  globalSendCommandPage('select_source_locations',  $('#copy_copy_path_source_db').val());
 });
 
 $("body").on('click', '#select_target_locations_btn', function(e){
   e.preventDefault();
-  global_send_command_sub('select_target_locations',  '', '', '', '타겟 Section Locations');
+  globalSendCommandPage('select_target_locations');
 });
-
 
 </script> 
 
