--- a/templates/plex_mate_base_setting.html
+++ b/templates/plex_mate_base_setting.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-
-
-{{ macros.m_button_group([['setting_save_btn', '설정 저장']])}}
+{{ macros.m_button_group([['setting_save_btn', '설정 저장'], ['agent_update_btn', 'Agent Update']])}}
 {{ macros.m_row_start('5') }}
 {{ macros.m_row_end() }}
+
 <nav>
   {{ macros.m_tab_head_start() }}
     {{ macros.m_tab_head('normal', 'Plex 연결', true) }}
     {{ macros.m_tab_head('etc', '기타', false) }}
+    {{ macros.m_tab_head('agent', 'Agent', false) }}
   {{ macros.m_tab_head_end() }}
 </nav>
 <form id='setting'>
@@ -34,11 +34,14 @@
 
 {{ macros.m_tab_content_start('etc', false) }}
   {{ macros.setting_input_text_and_buttons('base_path_config', '고급 설정', [['base_path_config_select_btn', '파일 선택'], ['globalEditBtn', '편집기에서 열기', [['tag', 'base_path_config']] ]], value=arg['base_path_config']) }}
-
   {{ macros.setting_checkbox('base_backup_location_mode', '백업 위치', value=arg['base_backup_location_mode'], desc=['On : 같은 폴더', 'Off : 지정 폴더']) }}
   <div id="base_backup_location_mode_div" class="collapse">
   {{ macros.setting_input_text_and_buttons('base_backup_location_manual', '백업 경로', [['select_base_backup_location_manual_btn', '경로 선택']], value=arg['base_backup_location_manual'], desc=['DB  파일 백업 폴더']) }}
   </div>
+{{ macros.m_tab_content_end() }}  
+
+{{ macros.m_tab_content_start('agent', false) }}
+  {{ macros.setting_checkbox('base_agent_auto_update', 'Agnet 자동 업데이트', value=arg['base_agent_auto_update'], desc=['On : 시작시 Agent를 자동 업데이트']) }}
 {{ macros.m_tab_content_end() }}  
   
 </div>
@@ -193,10 +196,15 @@ $("body").on('click', '#version_btn', function(e){
 $("body").on('click', '#base_path_config_select_btn', function(e){
   e.preventDefault();
   var path = $('#base_path_config').val().trim();
-  if (path == '') path = path_app + '/data/db';
+  if (path == '') path = '/';
   globalSelectLocalFile("설정 파일", path, function(result){
     $('#base_path_config').val(result);
   });
+});
+
+$("body").on('click', '#agent_update_btn', function(e){
+  e.preventDefault();
+  globalSendCommand('agent_update');
 });
 
 </script>    
