--- a/templates/plex_mate_scan_setting.html
+++ b/templates/plex_mate_scan_setting.html
@@ -4,6 +4,7 @@
 {{ macros.m_button_group([['globalSettingSaveBtn', '설정 저장']])}}
 {{ macros.m_row_start('5') }}
 {{ macros.m_row_end() }}
+{{ macros.m_hr() }}
 <nav>  
   {{ macros.m_tab_head_start() }}
     {{ macros.m_tab_head('basic', '기본', true) }}
@@ -16,7 +17,7 @@
       {{ macros.setting_input_int('scan_max_scan_count', '최대 실행 프로세스 수', min=1, max=20, value=arg['scan_max_scan_count']) }}
       {{ macros.setting_input_int('scan_max_wait_time', '파일체크 대기 시간', value=arg['scan_max_wait_time'], desc=['파일(폴더) 대기 시간. 분단위', '추가 모드 : 파일이 나타날 때까지 대기 시작.', '삭제 모드 : 파일이 없어질 때까지 대기 시간']) }}
       {{ macros.setting_input_int('scan_filecheck_thread_interval', '파일체크 주기', value=arg['scan_filecheck_thread_interval'], desc=['단위 : 초']) }}
-      {{ macros.setting_radio_with_value('scan_mode', '스캔 방식', [['bin', '바이너리'], ['web', '웹']], value=arg['scan_mode'], desc=['바이너리 모드로 사용 하다 Plex가 지원하지 않는 경우 변경']) }}
+      <!--{{ macros.setting_radio_with_value('scan_mode', '스캔 방식', [['bin', '바이너리'], ['web', '웹']], value=arg['scan_mode'], desc=['바이너리 모드로 사용 하다 Plex가 지원하지 않는 경우 변경']) }}-->
 
       {{ macros.m_hr_head_bottom() }}
       {{ macros.info_text_big('', '<테스트>', '')}}
