--- a/templates/plex_mate_subtitle_task.html
+++ b/templates/plex_mate_subtitle_task.html
@@ -27,8 +27,9 @@
   <div class="input-group col-sm-4" style="padding-left:0px; padding-top:5px">
     <div class="btn-group btn-group-sm flex-wrap mr-2" role="group" style="padding-left:5px; padding-top:0px">
       <button id="stop_btn" class="btn btn-sm btn-outline-info">중지</button>
-      <button id="start0_btn" class="btn btn-sm btn-outline-info">파일시스템 기준</button>
-      <button id="start1_btn" class="btn btn-sm btn-outline-info">DB 기준(개발중)</button>
+      <button id="start0_btn" class="btn btn-sm btn-outline-info">시작</button>
+      <!--<button id="start0_btn" class="btn btn-sm btn-outline-info">파일시스템 기준</button>-->
+      <!--<button id="start1_btn" class="btn btn-sm btn-outline-info">DB 기준(개발중)</button>-->
     </div>
   </div>
 </div>
@@ -56,32 +57,31 @@ var sub = "{{ arg['sub'] }}";
 var current_data = null;
 
 $(document).ready(function(){
-  //$('#main_container').attr('class', 'container-fluid');  
   socket_init(package_name, sub);
-  global_send_command2('section_location', $('#library_select').val(), null, null, null, function(ret) {
+  globalSendCommand('section_location', $('#library_select').val(), null, null, function(ret) {
     make_locations_list(ret);
   });
 });
 
 $("body").on('click', '#start0_btn', function(e){
   e.preventDefault();
-  global_send_command2('start0', $('#library_select').val(), $('#section_location').val());
+  globalSendCommand('start0', $('#library_select').val(), $('#section_location').val());
 });
 
 $("body").on('click', '#start1_btn', function(e){
   e.preventDefault();
-  global_send_command2('start1', $('#library_select').val(), $('#section_location').val());
+  globalSendCommand('start1', $('#library_select').val(), $('#section_location').val());
 });
 
 $("body").on('click', '#stop_btn', function(e){
   e.preventDefault();
-  global_send_command2('stop');
+  globalSendCommand('stop');
 });
 
 
 $("body").on('change', '#library_select', function(e){
   e.preventDefault();
-  global_send_command2('section_location', $('#library_select').val(), null, null, null, function(ret) {
+  globalSendCommand('section_location', $('#library_select').val(), null, null, function(ret) {
     make_locations_list(ret);
   });
 });
@@ -102,26 +102,26 @@ function make_locations_list(data) {
 function make_one(data) {
   //if (data.ret.find_meta)
   //  return
-  row = m_row_start_hover();
-  row += make_log("폴더", data.dir);
-  row += make_log("파일", data.filename);
+  row = j_row_start_hover();
+  row += j_info_text("폴더", data.dir);
+  row += j_info_text("파일", data.filename);
   if (data.ret.find_meta) {
     if (data.section_type == 'movie') {
-      row += make_log('메타', text_color(data.meta_subtitle.title, 'blue'));
+      row += j_info_text('메타', text_color(data.meta_subtitle.title, 'blue'));
     } else {
-      row += make_log('메타', text_color(data.meta_subtitle.show_title + ' 시즌:' + data.meta_subtitle.season_index + ' 에피소드:' + data.meta_subtitle.episode_index, 'blue'));
+      row += j_info_text('메타', text_color(data.meta_subtitle.show_title + ' 시즌:' + data.meta_subtitle.season_index + ' 에피소드:' + data.meta_subtitle.episode_index, 'blue'));
     }
   } else {
 
     ret = 'DB에 자막 정보 없음. ';
     if (data.ret.find_video) {
       ret += '비디오 파일 있음. '
-      row += make_log('비디오파일', data.ret.find_videofilename);
+      row += j_info_text('비디오파일', data.ret.find_videofilename);
       if (data.ret.meta_by_videofile) {
         if (data.section_type == 'movie') {
-          row += make_log('메타', text_color(data.meta_videofile.title, 'blue'));
+          row += j_info_text('메타', text_color(data.meta_videofile.title, 'blue'));
         } else {
-          row += make_log('비디오파일 메타', text_color(data.meta_videofile.show_title + ' 시즌:' + data.meta_videofile.season_index + ' 에피소드:' + data.meta_videofile.episode_index, 'blue'));
+          row += j_info_text('비디오파일 메타', text_color(data.meta_videofile.show_title + ' 시즌:' + data.meta_videofile.season_index + ' 에피소드:' + data.meta_videofile.episode_index, 'blue'));
         }
       } else {
         ret += '비디오파일 메타 없음. '
@@ -130,60 +130,33 @@ function make_one(data) {
       ret += '비디오 파일 없음. '
     }
 
-    row += make_log('결과', text_color(ret));
-    row += make_log('JSON', '<pre>' + JSON.stringify(data, null, 2) + '</pre>');
-    
+    row += j_info_text('결과', text_color(ret));
+    row += j_info_text('JSON', j_pre(JSON.stringify(data, null, 2)));    
   }
   
 
   if (data.smi2srt != null) {
     if (data.smi2srt['ret'] == 'success') {
-      row += make_log('smi2srt 결과', '<pre>' + JSON.stringify(data.smi2srt) + '</pre>');
+      row += j_info_text('smi2srt 결과', '<pre>' + JSON.stringify(data.smi2srt) + '</pre>');
     } else {
-      row += make_log('smi2srt 결과', '<pre>' + text_color(JSON.stringify(data.smi2srt, null, 2)) + '</pre>');
+      row += j_info_text('smi2srt 결과', '<pre>' + text_color(JSON.stringify(data.smi2srt, null, 2)) + '</pre>');
     }
   }
-  btn = '';
-  btn += m_button('open_filemanager_btn', 'Open Filemanager', [{'key':'path', 'value':data.dir}]);
-  row += make_log('', btn);
-  
-  /*
-  if (data.ret.smi2srt) {
-    row += make_log('smi2srt', text_color(data.meta_subtitle.title));
-  }
-  row += make_log("HASH / GUID", data.db.hash + ' - ' + data.db.guid);
-  str = "크기 : " + color(humanFileSize(data.meta.total), 'blue');
-  str += " / 삭제 : " + color(humanFileSize(data.meta.remove));
-  row += make_log("Metadata", str);
-  if (data.media != null) {
-    str = "크기 : " + color(humanFileSize(data.media.total), 'blue');
-    str += " / 삭제 : " + color(humanFileSize(data.media.remove));
-    row += make_log("Media", str);
-  }
-  row += make_log("thumb", data.db.user_thumb_url);
-  row += make_log("art", data.db.user_art_url);
-  if (data.file_count != 0) {
-    row += make_log("파일", '전체 파일 : ' + data.file_count + ' / 삭제 파일 : ' + data.remove_count);
-  }
-  if (data.use_filepath != null) {
-    row += make_log("사용파일", '<pre>' + data.use_filepath.join('\n') + '</pre>');
-  }
-  if (data.remove_filepath != null) {
-    row += make_log("삭제파일", '<pre>' + data.remove_filepath.join('\n') + '</pre>');
-  }
-  */
-  row += m_row_end();
+  //btn = '';
+  //btn += j_button('open_filemanager_btn', 'Open Filemanager', {'path':data.dir});
+  //row += j_info_text('', btn);
+  row += j_row_end();
   return row;
 }
 
 
-function make_log2(key, value, empty=0, left=6) {
+function j_info_text2(key, value, empty=0, left=6) {
   row = '';
-  if (empty !=0 ) row += m_col(empty, '', aligh='left');
+  if (empty !=0 ) row += j_col(empty, '', aligh='left');
   left = left - empty;
   right = 12 - empty - left;
-  row += m_col(left, key, aligh='left');
-  row += m_col(right, value, aligh='left');
+  row += j_col(left, key, aligh='left');
+  row += j_col(right, value, aligh='left');
   return row;
 }
 
@@ -196,31 +169,31 @@ function make_status(data) {
   if (data.is_working == 'run')  tmp = '실행중';
   else if (data.is_working == 'stop')  tmp = '사용자 중지';
   else tmp = '대기중';
-  str += m_row_start_hover();
-  str += make_log2("상태", text_color(tmp));
+  str += j_row_start_hover();
+  str += j_info_text2("상태", text_color(tmp));
   if (data.subtitle_count != null) {
-    str += make_log2("자막파일 수", data.subtitle_count);
-    str += make_log2("DB에 자막 정보 있음", data.subtitle_exist_in_meta_count);
-    str += make_log2("DB에 자막 정보 없음", data.not_subtitle_exist_in_meta_count);
-    str += make_log2("자막에 맞는 비디오 파일 없음", data.not_videofile_exist_count, 1);
-    str += make_log2("자막에 맞는 비디오 파일 있음", data.videofile_exist_count, 1);
-    str += make_log2("비디오 파일이 DB에 없음 - 스캔", text_color(data.videofile_exist_not_in_meta_count), 2);
-    str += make_log2("비디오 파일이 DB에 있음 - 메타새로고침", text_color(data.videofile_exist_in_meta_count), 2);
-    str += make_log2('smi 파일 수', data.smi_count);
-    str += make_log2('변환 후 메타새로고침', data.smi2srt_count, 1);
-    str += make_log2('Show 단위 메타새로고침 수', data.meta_refresh_show_count);
+    str += j_info_text2("자막파일 수", data.subtitle_count);
+    str += j_info_text2("DB에 자막 정보 있음", data.subtitle_exist_in_meta_count);
+    str += j_info_text2("DB에 자막 정보 없음", data.not_subtitle_exist_in_meta_count);
+    str += j_info_text2("자막에 맞는 비디오 파일 없음", data.not_videofile_exist_count, 1);
+    str += j_info_text2("자막에 맞는 비디오 파일 있음", data.videofile_exist_count, 1);
+    str += j_info_text2("비디오 파일이 DB에 없음 - 스캔", text_color(data.videofile_exist_not_in_meta_count), 2);
+    str += j_info_text2("비디오 파일이 DB에 있음 - 메타새로고침", text_color(data.videofile_exist_in_meta_count), 2);
+    str += j_info_text2('smi 파일 수', data.smi_count);
+    str += j_info_text2('변환 후 메타새로고침', data.smi2srt_count, 1);
+    str += j_info_text2('Show 단위 메타새로고침 수', data.meta_refresh_show_count);
   }
-  str += m_row_end();
+  str += j_row_end();
   $('#status_div').html(str);
 }
 
 
 
 function socket_init(package_name, sub) {
-  socket = io.connect(window.location.protocol + "//" + document.domain + ":" + location.port + "/" + package_name + '/' + sub);
+  var socket = io.connect(window.location.href);
 
   socket.on('start', function(data){
-    global_send_command2('refresh');
+    globalSendCommand('refresh');
   });
 
   socket.on('refresh_all', function(data){
@@ -246,7 +219,7 @@ function socket_init(package_name, sub) {
 
       }
       row = '<div id="' + id + '">' + row + '</div>';
-      document.getElementById("list_div").innerHTML += m_hr() + one;
+      document.getElementById("list_div").innerHTML += j_hr() + one;
       if (current_data == null)
           current_data = []
       if (current_data.list == null)
@@ -272,7 +245,7 @@ function make_list(data2) {
     str += '<div id="data_' + data[i].index + '">';
     str += row;
     str += '</div>';
-    str += m_hr();
+    str += j_hr();
     
   }
   document.getElementById("list_div").innerHTML = str;
@@ -294,7 +267,9 @@ $("body").on('click', '#open_filemanager_btn', function(e){
 
 
 
-
+function j_pre(text) {
+  return '<pre style="word-wrap: break-word;white-space: pre-wrap;white-space: -moz-pre-wrap;white-space: -pre-wrap;white-space: -o-pre-wrap;word-break:break-all;">'+text+'</pre>';
+}
 
 
 
