--- a/templates/plex_mate_base_setting.html
+++ b/templates/plex_mate_base_setting.html
@@ -41,7 +41,7 @@
 {{ macros.m_tab_content_end() }}  
 
 {{ macros.m_tab_content_start('agent', false) }}
-  {{ macros.setting_checkbox('base_agent_auto_update', 'Agnet 자동 업데이트', value=arg['base_agent_auto_update'], desc=['On : 시작시 Agent를 자동 업데이트']) }}
+  {{ macros.setting_checkbox('base_agent_auto_update', 'Agent 자동 업데이트', value=arg['base_agent_auto_update'], desc=['On : 시작시 Agent를 자동 업데이트']) }}
 {{ macros.m_tab_content_end() }}  
   
 </div>
