--- a/templates/plex_mate_clear_show.html
+++ b/templates/plex_mate_clear_show.html
@@ -98,6 +98,7 @@ $("body").on('click', '#movie_stop_btn', function(e){
 
 
 function make_one(data) {
+  console.log(data);
   row = j_row_start_hover();
   row += make_log("제목", data.db.title);
   row += make_log("HASH / GUID", data.db.hash + ' - ' + data.db.guid);
@@ -111,17 +112,30 @@ function make_one(data) {
   }
   row += make_log("thumb", data.db.user_thumb_url);
   row += make_log("art", data.db.user_art_url);
-  if (data.db.user_music_url != null)
+  if (data.db.user_music_url != '')
     row += make_log("theme", data.db.user_music_url);
+  row += make_log("", "");
   if (data.file_count != 0) {
     row += make_log("파일", '전체 파일 : ' + data.file_count + ' / 삭제 파일 : ' + data.remove_count);
   }
+  for (var season_key in data.seasons){
+    row += make_log("Season "+season_key+" thumb", data.seasons[season_key].db.user_thumb_url);
+    tmp = "";
+    for (var episode_key in data.seasons[season_key].episodes) {
+      tmp += "Season " + season_key + " / Episode " + episode_key + " : " + data.seasons[season_key].episodes[episode_key].db.user_thumb_url + "<br>"
+    }
+    row += make_log("Season " + season_key, tmp);
+  }
+
+
+  /*
   if (data.use_filepath != null) {
     row += make_log("사용파일", '<pre>' + data.use_filepath.join('\n') + '</pre>');
   }
   if (data.remove_filepath != null) {
     row += make_log("삭제파일", '<pre>' + data.remove_filepath.join('\n') + '</pre>');
   }
+  */
   row += j_row_end();
   return row;
 }
